<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_activity"
    android:orientation="vertical"
    tools:context="com.xmd.cashier.activity.LoginActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_weight="2"
        android:background="@drawable/bg_area_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edt_username"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_login_account"
            android:drawablePadding="8dp"
            android:hint="@string/login_hint_username"
            android:inputType="none"
            android:maxEms="16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivide" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_login_password"
            android:drawablePadding="8dp"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxEms="16" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:onClick="onClickLogin"
        android:text="@string/login_button" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <TextView
        android:id="@+id/tv_versionName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onVersionClick"
        android:textColor="#73787E" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/login_company"
        android:textColor="#73787E" />

</LinearLayout>
