<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tip_origin_money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/tip_origin_money"
            android:textColor="@color/colorText3"
            android:textSize="@dimen/medium_font_size" />


        <com.xmd.cashier.widget.CustomMoneyEditText
            android:id="@+id/edit_origin_money"
            style="@style/AppTheme.MoneyEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@id/edit_origin_money"
            android:layout_toLeftOf="@id/edit_origin_money"
            android:layout_toRightOf="@id/tip_origin_money"
            android:clickable="true"
            android:gravity="end|center"
            android:onClick="onClickTriggerOriginMoney"
            android:text="@string/cashier_money_tag"
            android:textSize="@dimen/head_font_size" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivide" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.xmd.cashier.widget.CustomMoneyEditText
            android:id="@+id/edit_coupon_money"
            style="@style/AppTheme.MoneyEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="0" />

        <Button
            android:id="@+id/btn_coupon"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:onClick="onClickGetCouponInfo"
            android:padding="16dp"
            android:text="@string/btn_add_coupon"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@id/edit_coupon_money"
            android:layout_gravity="bottom"
            android:layout_toLeftOf="@id/edit_coupon_money"
            android:layout_toRightOf="@id/btn_coupon"
            android:clickable="true"
            android:gravity="end|center"
            android:onClick="onClickTriggerCouponMoney"
            android:text="@string/cashier_money_tag"
            android:textSize="@dimen/head_font_size" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivide" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/tip_finally_money"
            android:textColor="@color/colorText3"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/tv_finally_money"
            style="@style/AppTheme.MoneyEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@id/tv_finally_money"
            android:layout_gravity="bottom"
            android:layout_toLeftOf="@id/tv_finally_money"
            android:text="@string/cashier_money_tag"
            android:textSize="@dimen/head_font_size" />
    </RelativeLayout>

    <include
        layout="@layout/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
